# heffalump

./: CMakeLists.txt  LICENSE  NOTES.rst
bench/: CMakeLists.txt
bench/conv/: CMakeLists.txt  delta.c
bench/hof/: CMakeLists.txt  main.c  main.nopipeline.c  tictoc.c
bench/hog/: CMakeLists.txt  disks.c
bench/lk/: CMakeLists.txt  main.c
bench/smcopy/: CMakeLists.txt  main.cu
build-linux/: CMakeCache.txt
cmake/: git-tag.cmake  ide.cmake
example/: CMakeLists.txt  main.c
example/SFMT-src-1.5.1/: CMakeLists.txt  SFMT-sse2.h
example/conv/: delta.c  disks.c  rand.c
example/hof/: main.c
example/hog/: hogshow.c  main.c
example/hogshow/: CMakeLists.txt  hogshow.c  hogshow.h
example/imshow/: CMakeLists.txt  app.c  app.h  imshow.c  imshow.h  mingl.c  mingl.h
example/lk/: main.c
example/max_gpu/: CMakeLists.txt  max.cu
example/scan/: CMakeLists.txt  scan.cu
example/stream/: CMakeLists.txt  stream.cu
scripts/: build.ps1  continuous.ps1  inject-headers.ps1
src/: CMakeLists.txt  api.h  conv.h  crop.h  hof.h  hog.h  lk.h  version.c  version.h
src/cpu/: conv.cpp  diff.cpp  hof.c  hog.c  lk.c
src/cpu/pdollar/: CMakeLists.txt  gradientHist.cpp  wrappers.hpp
src/gpu/: absmax.cu  absmax.h  conv.cu  conv.h  crop.cu  crop.h  gradientHist.cu  gradientHist.h  hof.cpp  hof.cu  hog.c  lk.cu  lk.h  max.cu  max.h
test/: CMakeLists.txt  conv-param-check.cpp  hof-output-size.cpp  hof-param-check.cpp  hog-output-size.cpp  hog-param-check.cpp  lk-param-check.cpp  memcheck.cpp
