#   Copyright 2017 Vidrio Technologies
#   by Nathan Clack <nathan@vidriotech.com>
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0

add_subdirectory(smcopy)
add_subdirectory(conv)
add_subdirectory(hog)
add_subdirectory(lk)
add_subdirectory(hof)
